# yggdrasil-decision-forests

./: .bazelignore  .bazelrc  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MODULE.bazel  Makefile  README.md  WORKSPACE  WORKSPACE_NO_TF  WORKSPACE_WITH_TF  typos.toml
examples/model_server/: BUILD.bazel  Dockerfile  WORKSPACE  build_docker.sh  compile_and_run.sh  model_server.cc  run_docker.sh  send_request.sh
examples/standalone/: .bazelrc  BUILD.bazel  README.md  WORKSPACE  beginner.cc  compile_and_run.sh
yggdrasil_decision_forests/port/python/: .bazelrc  CHANGELOG.md  Dockerfile  INSTALLATION.md  MODULE.bazel  README.md  WORKSPACE  dev_requirements.txt  library.bzl  requirements.txt
yggdrasil_decision_forests/port/python/config/: MANIFEST.in  setup.py
yggdrasil_decision_forests/port/python/documentation/: glossary.md  readme.md
yggdrasil_decision_forests/port/python/examples/: minimal.py
yggdrasil_decision_forests/port/python/model/: model_wrapper.cc
yggdrasil_decision_forests/port/python/oss_third_party/pybind11_abseil/: workspace.bzl
yggdrasil_decision_forests/port/python/oss_third_party/pybind11_protobuf/: workspace.bzl
yggdrasil_decision_forests/port/python/test_data/: adult_gbt_tree_0.txt  golden_toy_tree_plot.txt  toy_tree.txt
yggdrasil_decision_forests/port/python/test_data/golden/: deep_adult_dataspec.pbtxt
yggdrasil_decision_forests/port/python/test_data/multilayerperceptron_adult/: abstract_model.pb  config.pb  data_spec.pb  weights
yggdrasil_decision_forests/port/python/test_data/tabulartransformer_adult/: abstract_model.pb  config.pb  data_spec.pb  weights
yggdrasil_decision_forests/port/python/tools/: README.md  assembly_pip_files.py  build.bat  build_linux_aarch64_release.sh  build_linux_aarch64_release_in_docker.sh  build_linux_release.sh  build_linux_release_in_docker.sh  build_macos_release.sh  build_pydf.sh  build_test_linux.sh  build_windows_release.bat  change_version.sh  collect_pip_files.py  local_copybara_export.sh  package_linux.sh  release_linux.sh  release_macos.sh  release_windows.bat  simple_test.py  start_notebook.sh  submit_pip_package.sh  test_pydf.sh  update_version.sh
yggdrasil_decision_forests/port/python/ydf/: BUILD  __init__.py  api_test.py  library.bzl  version.py
yggdrasil_decision_forests/port/python/ydf/api/: BUILD  experimental.py  help.py  internal.py  util.py
yggdrasil_decision_forests/port/python/ydf/cc/: BUILD  ydf.cc  ydf.pyi
yggdrasil_decision_forests/port/python/ydf/dataset/: BUILD  dataset.cc  dataset.h  dataset.py  dataset_test.py  dataset_with_tf_test.py  dataspec.py  dataspec_test.py
yggdrasil_decision_forests/port/python/ydf/dataset/io/: BUILD  (+15 more)
yggdrasil_decision_forests/port/python/ydf/deep/: BUILD  __init__.py  analysis.py  analysis_test.py  dataset.py  dataset_test.py  deep_model.proto  generic_jax.py  hyperparameter.py  hyperparameter_test.py  jax_fallback.py  layer.py  layer_test.py  metric.py  metric_test.py  mlp.py  mlp_test.py  model_lib.py  preprocessor.py  preprocessor_test.py  safetensors.py  safetensors_test.py  tabular_transformer.py  tabular_transformer_test.py
yggdrasil_decision_forests/port/python/ydf/learner/: BUILD  abstract_feature_selector.py  cart_learner_test.py  custom_loss.cc  custom_loss.h  custom_loss.py  custom_loss_test.py  custom_metric.cc  custom_metric.h  custom_metric.py  custom_metric_test.py  distributed_learner_test.py  feature_selector.py  feature_selector_test.py  generic_learner.py  generic_learner_test.py  gradient_boosted_trees_learner_test.py  hyperparameters.py  hyperparameters_test.py  isolation_forest_learner_test.py  learner.cc  learner.h  learner_test.py  learner_test_utils.py  learner_with_tf_test.py  learner_with_xarray_test.py  random_forest_learner_test.py  specialized_learners_pre_generated.py  tuner.py  tuner_test.py  worker.cc  worker.h  worker.py  worker_main.py
yggdrasil_decision_forests/port/python/ydf/metric/: BUILD  display_metric.py  evaluate.cc  evaluate.h  evaluate.py  evaluate_test.py  metric.cc  metric.h  metric.py  metric_test.py
yggdrasil_decision_forests/port/python/ydf/model/: BUILD  analysis.py  benchmark.py  benchmark_test.py  decision_forest_model.py  export_cc_generator.py  export_cc_run_test.cc  export_docker.py  export_docker_test.py  export_jax.py  export_sklearn.py  export_tf.py  feature_selector_logs.py  generic_model.py  gradient_boosted_trees_model.py  jax_model_test.py  model.cc  model.h  model_lib.py  model_metadata.py  model_test.py  model_wrapper.cc  model_wrapper.h  optimizer_logs.py  optimizer_logs_test.py  random_forest_model.py  sklearn_model_test.py  template_cpp_export.py  tf_model_test.py
yggdrasil_decision_forests/port/python/ydf/monitoring/: BUILD  benchmark_inference_speed.py  benchmark_inference_speed_test.py  benchmark_io_speed.py  benchmark_io_speed_main.py  benchmark_train_speed.py  benchmark_train_speed_main.py  benchmark_train_speed_test.py
yggdrasil_decision_forests/port/python/ydf/util/: BUILD  dataset_io.py  help.py  log_book.py  log_book_test.py  tf_example.py  tf_example_impl.py  tf_example_test.py  vertex_ai.py  vertex_ai_test.py
yggdrasil_decision_forests/port/python/ydf/utils/: BUILD  concurrency.py  custom_casters.h  documentation.py  filesystem.py  filesystem_default.py  filesystem_google.py  filesystem_test.py  func_helpers.py  func_helpers_test.py  html.py  html_test.py  log.cc  log.h  log.py  numpy_data.cc  numpy_data.h  paths.py  paths_test.py  pybind.h  pybind_test.py  pybind_test_helper.cc  status_casters.h  string_lib.py  string_lib_test.py  test_utils.py  test_utils_test.py
yggdrasil_decision_forests/port/tensorflow/: .bazelrc  BUILD  MODULE.bazel  README.md  build_pip_pkg.sh
yggdrasil_decision_forests/port/tensorflow/pip_pkg/: setup.py  test_pkg.py
yggdrasil_decision_forests/port/tensorflow/tools/: MODULE.bazel.legacy  build_pip_pkg.sh  build_pip_pkg_macos.sh  registration.h.legacy
yggdrasil_decision_forests/port/tensorflow/ydf_tf/: BUILD  __init__.py  api.py  kernel.cc  op.cc  op.py  op_dynamic.py  test_utils.py  tf1_test.py  tf2_test.py
(+1364 files in other folders)
